<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY action_sign_in_short "Sign in">
    <!ENTITY tos_url "http://google.com">
    <!ENTITY pp_url "http://youtube.com">
]>

<resources>
    <!-- Common strings -->
    <string name="app_name">Toosa Finder</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password_confirmation">Password confirmation</string>
    <string name="placeholder_email">Your email address</string>
    <string name="placeholder_login">Your login (optional)</string>
    <string name="placeholder_password">Your password</string>
    <string name="placeholder_password_confirmation">Repeat your password</string>
    <string name="button_done">Done!</string>
    <string name="button_continue">Continue</string>
    <string name="all_valid"></string>
    <string name="error_invalid_username">Not a valid username</string>
    <string name="error_invalid_password_short">Password must have at least 8 characters</string>
    <string name="deepLinkIP">34.222.255.162</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">&action_sign_in_short;</string>
    <string name="prompt_email_or_login">Email or login</string>
    <string name="placeholder_email_or_login">Your email address or login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="check_email_text">We send a password restoration link. Check your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_not_found">User not found</string>
    <string name="invalid_email_token">Email token not valid</string>
    <string name="error_login">Wrong login or password</string>
    <!-- registration -->
    <string name="prompt_agreement">I agree to the <a href="&tos_url;">Terms of Services</a> and <a href="&pp_url;">Privacy Policy</a></string>
    <string name="account_question">Have an Account? &action_sign_in_short;</string>
    <string name="error_invalid_password_unequal">Passwords must be equal</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_no_agreement">Please agree to Terms of Services and Privacy Policy</string>
    <string name="error_registration">Error during registration: </string>
    <!-- event creation -->
    <string name="title_activity_event_creation">Event Creation</string>
    <string name="prompt_event_name">Name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_tags">Tags</string>
    <string name="prompt_publicity">Public</string>
    <string name="prompt_size_s">S</string>
    <string name="prompt_size_m">M</string>
    <string name="prompt_size_l">L</string>
    <string name="prompt_size_xl">XL+</string>
    <string name="prompt_popular_tags">Popular tags</string>
    <string name="prompt_close_event_creation">Are you sure to exit event creation?</string>
    <string name="placeholder_event_name">Your event name</string>
    <string name="placeholder_description">Description about your event</string>
    <string name="placeholder_location">Where?</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_time">Time</string>
    <string name="placeholder_add_tag">Tag name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="button_add_tag">Add tag</string>
    <string name="button_edit_tag">Save tag</string>
    <string name="error_no_name">Please, write event name</string>
    <string name="error_no_desc">Please, write event description</string>
    <string name="error_no_location">Please, choose event location</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="error_invalid_time">Invalid time</string>
    <string name="error_date_before">Date is overdue</string>
    <string name="error_event_creation">Error during event creation: </string>
    <!-- event info -->
    <string name="title_activity_event_info">Event Info</string>
    <string name="placeholder_name_and_creator_name">Name and creator name</string>
    <string name="placeholder_event_description">Event description</string>
    <string name="placeholder_time_and_date">Time and date</string>
    <string name="placeholder_max_guests">Max-guests: -</string>
    <string name="placeholder_event_location">Event location</string>
    <string name="button_back">Back</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="prompt_event_size">Size</string>
    <string name="prompt_event_creator">Creator</string>
    <string name="placeholder_creator_name_info">Creator name</string>
    <string name="placeholder_event_description_info">Description about event</string>
    <string name="prompt_event_location_info">Location</string>
    <string name="prompt_event_info_time_date">Date and Time</string>
    <string name="buttonOk">Ok</string>
    <!-- GoogleMaps -->
    <string name="google_maps_key">AIzaSyDz858IAptxz1Xr0QX2eZWrQDzHQGtytMg</string>
</resources>
