<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventInfo.EventInfoActivity">

    <co.lujun.androidtagview.TagContainerLayout
        android:id="@+id/tagView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:minHeight="@dimen/activity_vertical_margin"
        android:padding="@dimen/fab_margin"
        app:container_enable_drag="false"
        app:horizontal_interval="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLocation"
        app:tag_clickable="true"
        app:tag_theme="pure_teal"
        app:vertical_interval="10dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="331dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="13dp"
        android:text="@string/placeholder_name_and_creator_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxGuestsLabel" />

    <TextView
        android:id="@+id/eventDescription"
        android:layout_width="331dp"
        android:layout_height="124dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/placeholder_event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

    <TextView
        android:id="@+id/eventTime"
        android:layout_width="329dp"
        android:layout_height="124dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="21dp"
        android:text="@string/placeholder_time_and_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagView" />

    <TextView
        android:id="@+id/maxGuestsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/placeholder_max_guests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/eventLocation"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:text="@string/placeholder_event_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescription" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="152dp"
        android:layout_height="61dp"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="22dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="156dp"
        android:layout_height="59dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/button_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>