<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_event_name"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFieldEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_event_creator"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEventName" />

    <TextView
        android:id="@+id/textFieldEventCreator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/placeholder_creator_name_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOne" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_description"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEventCreator" />

    <TextView
        android:id="@+id/textFieldEventDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/placeholder_event_description_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <!--        android:inputType="textMultiLine"-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_tags"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEventDescription" />

    <co.lujun.androidtagview.TagContainerLayout
        android:id="@+id/tagView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:padding="@dimen/fab_margin"
        android:minHeight="@dimen/activity_vertical_margin"
        app:container_enable_drag="false"
        app:horizontal_interval="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:tag_clickable="true"
        app:tag_theme="pure_teal"
        app:vertical_interval="10dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_event_size"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagView" />

    <TextView
        android:id="@+id/textFieldEventSize"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_location"
        app:layout_constraintLeft_toRightOf="@id/textView4"
        app:layout_constraintStart_toStartOf="@id/textViewEventLocation"
        app:layout_constraintTop_toBottomOf="@+id/tagView"
        app:layout_constraintBottom_toBottomOf="@id/textView4"/>


    <TextView
        android:id="@+id/textViewTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_event_location_info"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textViewEventLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_location"
        app:layout_constraintLeft_toRightOf="@id/textViewTwo"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintBottom_toBottomOf="@id/textViewTwo"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_date"
        app:layout_constraintEnd_toStartOf="@+id/TextViewTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventLocation" />

    <TextView
        android:id="@+id/TextViewTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventLocation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/prompt_publicity"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />


    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@android:color/holo_red_light"
        android:text="@string/button_delete"
        android:textSize="@dimen/font_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOk"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@android:color/holo_green_light"
        android:text="@string/buttonOk"
        android:textSize="@dimen/font_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete" />


</androidx.constraintlayout.widget.ConstraintLayout>